Split gwdb into gwdb1 and gwdb2 and fixed compilation

--- a/bin/contrib/oneshot/dune.in
+++ b/bin/contrib/oneshot/dune.in
@@ -1,4 +1,4 @@
 (executables
  (names gwRemoveImgGallery gwBaseCompatiblePlus gwFixDateText gwExportAscCSV gwFixAddEvent gwMostAsc)
-  (libraries geneweb)
+  (libraries %%%GWDB_PKG%%% geneweb)
 )
