--- a/bin/contrib/gwpublic/dune.in
+++ b/bin/contrib/gwpublic/dune.in
@@ -1,4 +1,4 @@
 (executables
   (names gwpublic gwpublic1 gwpublic2 gwpublic2priv gwprivate gwiftitles)
-  (libraries geneweb)
+  (libraries %%%GWDB_PKG%%% geneweb)
 )
