--- a/bin/distrib/dune.in
+++ b/bin/distrib/dune.in
@@ -22,15 +22,17 @@
   (libraries %%%GWDB_PKG%%% geneweb)
 )
 
+(library (name gwclib) (wrapped false) (libraries %%%GWDB_PKG%%% geneweb) (modules gwclib))
+
 #ifdef GWDB1
 (library (name db1link) (wrapped false) (libraries geneweb.gwdb1 geneweb) (modules db1link))
-(rule (copy gwc1/gwc1.ml gwc.ml))
+(rule (copy gwc/gwc1.ml gwc.ml))
 (rule (copy ged2gwb/ged2gwb1.ml ged2gwb.ml))
 (executable
   (public_name gwc)
   (modules gwc)
   (preprocess (action (run %{bin:cppo} %%%CPPO_D%%% %{input-file})))
-  (libraries geneweb.gwdb1 geneweb geneweb.wserver db1link)
+  (libraries geneweb.gwdb1 geneweb geneweb.wserver gwclib db1link)
 )
 (executable
   (public_name ged2gwb)
@@ -41,13 +43,13 @@
 
 #ifdef GWDB2
 (library (name db2link) (wrapped false) (libraries geneweb.gwdb2 geneweb) (modules db2link))
-(rule (copy gwc2/gwc2.ml gwc.ml))
+(rule (copy gwc/gwc2.ml gwc.ml))
 (rule (copy ged2gwb/ged2gwb2.ml ged2gwb.ml))
 (executable
   (public_name gwc)
   (modules gwc)
   (preprocess (action (run %{bin:cppo} %%%CPPO_D%%% %{input-file})))
-  (libraries geneweb.gwdb2 geneweb geneweb.wserver db2link)
+  (libraries geneweb.gwdb2 geneweb geneweb.wserver gwclib db2link)
 )
 (executable
   (public_name ged2gwb)
