--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,3 +34,5 @@ build_script:
   - '%CYG_BASH% "cd ${APPVEYOR_BUILD_FOLDER} && ./configure --gwdb1 && make test bench distrib"'
   - '%CYG_BASH% "cd ${APPVEYOR_BUILD_FOLDER} && ./configure --gwdb1 --sosa-num && make clean test bench"'
   - '%CYG_BASH% "cd ${APPVEYOR_BUILD_FOLDER} && ./configure --gwdb1 --sosa-zarith && make clean test bench "'
+  - '%CYG_BASH% "cd ${APPVEYOR_BUILD_FOLDER} && ./configure --gwdb1 --cgi && make clean test bench "'
+
