--- a/geneweb.opam
+++ b/geneweb.opam
@@ -12,7 +12,7 @@ bug-reports: "https://github.com/geneweb/geneweb/issues"
 
 build: [
   [ "./configure" "--api" ]
-  [ make "install-exe" ]
+  [ make "exe" ]
 ]
 
 install: [
