Used Zarith lib for Sosa module.

--- a/lib/dune.in
+++ b/lib/dune.in
@@ -4,6 +4,7 @@
  (synopsis "GeneWeb library")
  (preprocess (action (run %{bin:cppo} %%%API%%% -V OCAML:%{ocaml_version} %{input-file})))
  (libraries unix
+            zarith
             %%%API_DEP%%%
             str
             camlp5
