--- a/geneweb.opam
+++ b/geneweb.opam
@@ -1,5 +1,7 @@
 opam-version: "2.0"
 
+synopsis: "Genealogy library and software"
+
 maintainer: [ "Julien Sagot <julien.sagot@geneanet.org>" ]
 
 authors: [ "Daniel de Rauglaudre" ]
@@ -36,17 +38,5 @@ depends: [
   "dune" { build >= "1.1.1" }
   "markup"
   "ocaml" { >= "4.05" }
-  "ocurl" { = "0.8.1" }
   "ounit" { with-test }
-  "piqi"
-  "piqilib"
-  "redis"
-  "redis-sync"
-  "yojson"
-  "zarith" { >= "1.7" }
-]
-
-depexts: [
-  [ [ "ubuntu" "linux" ] [ "protobuf-compiler" ] ]
-  [ [ "homebrew" "osx" ] [ "protobuf" ] ]
 ]
