--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,24 +1,21 @@
-# Not building with API because piqi does not compile on windows
-
 platform:
-  - x86
+  - x64
 
 environment:
-  CYG_ROOT: C:/cygwin
-  CYG_BASH: '%CYG_ROOT%/bin/bash -lc'
+  CYG_ROOT: 'C:\cygwin64'
+  CYG_BASH: 'C:\cygwin64\bin\bash -lc'
 
 install:
   - 'set OPAMYES=1'
-  - '%CYG_ROOT%\setup-x86.exe -qnNdO -R %CYG_ROOT% -s http://cygwin.mirror.constant.com -l C:/cygwin/var/cache/setup -P rsync -P patch -P diffutils -P unzip -P m4 -P mingw64-x86_64-gcc-core -P mingw64-x86_64-gtk2.0'
-  - '%CYG_BASH% "curl -fsSL -o opam64.tar.xz https://github.com/fdopen/opam-repository-mingw/releases/download/0.0.0.2/opam64.tar.xz"'
-  - '%CYG_BASH% "tar -xf opam64.tar.xz"'
-  - '%CYG_BASH% "opam64/install.sh"'
-  - '%CYG_BASH% "opam init default \"https://github.com/fdopen/opam-repository-mingw.git#opam2\" -c \"ocaml-variants.4.07.1+mingw64\" --disable-sandboxing"'
-  - '%CYG_BASH% "eval $(opam env)"'
-  - '%CYG_BASH% "opam update"'
-  - '%CYG_BASH% "opam pin add --no-action markup git://github.com/geneanet/markup.ml"'
-  - '%CYG_BASH% "opam depext camlp5 cppo dune markup ounit"'
-  - '%CYG_BASH% "opam install camlp5 cppo dune markup ounit"'
+  - '%CYG_ROOT%\setup-x86_64.exe -qnNdO -R %CYG_ROOT% -s http://cygwin.mirror.constant.com -l C:\cygwin\var\cache\setup -P diffutils -P git -P libgmp-devel -P make -P m4 -P patch -P perl -P rsync -P unzip -P mingw64-x86_64-gcc-core'
+  - '%CYG_BASH% ''curl -fsSL -o opam64.tar.xz "https://github.com/fdopen/opam-repository-mingw/releases/download/0.0.0.2/opam64.tar.xz"'''
+  - '%CYG_BASH% ''tar -xf opam64.tar.xz'''
+  - '%CYG_BASH% ''opam64/install.sh'''
+  - '%CYG_BASH% ''opam init default "https://github.com/fdopen/opam-repository-mingw.git#opam2" -c "ocaml-variants.4.07.1+mingw64" --disable-sandboxing'''
+  - '%CYG_BASH% ''eval $(ocaml-env cygwin)'''
+  - '%CYG_BASH% ''opam update'''
+  - '%CYG_BASH% ''opam pin add --no-action -k path geneweb.dev ${APPVEYOR_BUILD_FOLDER}'''
+  - '%CYG_BASH% ''opam install geneweb.dev --deps-only'''
 
 build_script:
-  - '%CYG_BASH% "cd ${APPVEYOR_BUILD_FOLDER} && eval $(opam env) && ./configure && make clean test distrib clean"'
+  - '%CYG_BASH% ''cd ${APPVEYOR_BUILD_FOLDER} && ./configure && make clean distrib clean'''
