--- a/benchmark/dune.in
+++ b/benchmark/dune.in
@@ -1,6 +1,6 @@
 (executable
   (name bench)
-  (libraries geneweb benchmark)
+  (libraries %%%SOSA_PKG%%% geneweb benchmark)
 )
 
 (alias (name runbench) (action (run ./bench.exe) ) )
