--- a/lib/dune.in
+++ b/lib/dune.in
@@ -9,7 +9,7 @@
             str
             camlp5
             camlp5.gramlib
-            geneweb.gwdb
+            geneweb.gwdb.mli
             geneweb.def
             geneweb.util
             geneweb.wserver.mli
