--- a/lib/sosa.mli/dune
+++ b/lib/sosa.mli/dune
@@ -1,6 +1,6 @@
 (library
  (name sosa)
- (public_name geneweb.sosa)
+ (public_name geneweb.sosa.mli)
  (wrapped false)
  (modules_without_implementation sosa)
  (flags       (:standard -no-keep-locs))
