--- a/lib/dune.in
+++ b/lib/dune.in
@@ -12,7 +12,7 @@
             geneweb.gwdb.mli
             geneweb.def
             geneweb.util
-            geneweb.wserver
+            geneweb.wserver.mli
             markup)
  (modules_without_implementation config templAst)
 )
