--- a/bin/contrib/gwbase/etc/dune
+++ b/bin/contrib/gwbase/etc/dune
@@ -1,6 +1,6 @@
 ; TOFIX_EXE := cleopatre popule modif
 
 (executables
- (names public public2 geneanet clavier hist selroy chkimg consmoy lune titres gwck nbdesc probot)
+ (names public public2 geneanet clavier hist selroy chkimg check_apostr consmoy lune titres gwck nbdesc probot)
   (libraries geneweb)
 )
