--- a/lib/dune.in
+++ b/lib/dune.in
@@ -9,6 +9,7 @@
             camlp5
             camlp5.gramlib
             geneweb.wserver
+            yojson
             markup)
  (modules_without_implementation config dbdisk def templAst)
 )
