--- a/lib/dune.in
+++ b/lib/dune.in
@@ -12,5 +12,5 @@
             camlp5.gramlib
             geneweb.wserver
             markup)
- (modules_without_implementation config dbdisk def templAst)
+ (modules_without_implementation dbdisk def templAst)
 )
