--- a/bin/contrib/oneshot/dune
+++ b/bin/contrib/oneshot/dune
@@ -1,4 +1,4 @@
 (executables
- (names gwRemoveImgGallery gwBaseCompatiblePlus gwFixDateText gwExportAscCSV gwFixAddEvent gwMostAsc)
+ (names gwRemoveImgGallery gwBaseCompatiblePlus gwFixDateText gwExportAscCSV gwFixAddEvent gwMostAsc gwFixFalseMarriageLicense)
   (libraries geneweb)
 )
