Pervasives -> Stdlib + used stdlib-shims for OCaml < 4.07 support.

--- a/lib/dune.in
+++ b/lib/dune.in
@@ -6,6 +6,7 @@
  (libraries unix
             %%%API_DEP%%%
             str
+            stdlib-shims
             camlp5
             camlp5.gramlib
             geneweb.wserver
