--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,8 @@ script:
     eval $(opam config env) ;
     if [[ "$OCAML_VERSION" == "4.08" ]] ; then
       opam pin add camlp5 https://github.com/sagotch/camlp5.git#patch-1 -k git --no-action ;
-      opam pin add piqilib https://github.com/alavrik/piqi.git -k git --no-action ;
+      opam pin add piqilib https://github.com/alavrik/piqi.git --no-action ;
+      opam pin add piqi https://github.com/geneanet/piqi-ocaml.git --no-action ;
     fi ;
     opam pin add geneweb . --no-action ;
     opam install geneweb --deps-only ;
