--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,8 +17,8 @@ install:
   - '%CYG_BASH% "eval $(opam env)"'
   - '%CYG_BASH% "opam update"'
   - '%CYG_BASH% "opam pin add --no-action markup git://github.com/geneanet/markup.ml"'
-  - '%CYG_BASH% "opam depext camlp5 cppo dune markup ounit"'
-  - '%CYG_BASH% "opam install camlp5 cppo dune markup ounit"'
+  - '%CYG_BASH% "opam depext camlp5 cppo dune markup ounit stdlib-shims"'
+  - '%CYG_BASH% "opam install camlp5 cppo dune markup ounit stdlib-shims"'
 
 build_script:
   - '%CYG_BASH% "cd ${APPVEYOR_BUILD_FOLDER} && eval $(opam env) && ./configure && make clean test distrib clean"'
