--- a/.travis.yml
+++ b/.travis.yml
@@ -34,19 +34,19 @@ install:
 script:
   - set -ex ;
     export OPAMYES=1 ;
+    export DEPS='benchmark camlp5 cppo dune markup ocaml ounit num ocurl piqi piqilib redis redis-sync stdlib-shims yojson zarith' ;
     eval $(opam config env) ;
     if [[ "$OCAML_VERSION" == "4.08" ]] ; then
       opam pin add camlp5 https://github.com/sagotch/camlp5.git#patch-1 -k git --no-action ;
       opam pin add piqilib https://github.com/alavrik/piqi.git --no-action ;
       opam pin add piqi https://github.com/geneanet/piqi-ocaml.git --no-action ;
     fi ;
-    opam pin add geneweb . --no-action ;
+    opam pin add markup https://github.com/geneanet/markup.ml -k git --no-action ;
     opam update ;
-    opam install geneweb --with-test --deps-only ;
+    opam install depext ;
+    opam depext $DEPS ;
+    opam install $DEPS ;
     ./configure && make clean test bench distrib clean ;
-    opam install ocurl piqi piqilib redis redis-sync yojson ;
-    ./configure --api && make clean test bench distrib clean ;
-    opam install num ;
     ./configure --sosa-num && make clean test bench distrib clean ;
-    opam install zarith ;
     ./configure --sosa-zarith && make clean test bench distrib clean ;
+    ./configure --api && make clean test bench distrib clean ;
