--- a/lib/gwdb1/dune
+++ b/lib/gwdb1/dune
@@ -2,7 +2,7 @@
  (name gwdb1_internal)
  (public_name geneweb.gwdb1_internal)
  (wrapped false)
- (libraries geneweb.def geneweb.wserver.mli geneweb.util geneweb.io)
+ (libraries str geneweb.def geneweb.wserver.mli geneweb.util geneweb.io)
  (modules_without_implementation dbdisk)
  (modules
     database
