bench: fixed bench when building with --api

--- a/benchmark/dune.in
+++ b/benchmark/dune.in
@@ -1,5 +1,6 @@
 (executable
   (name bench)
+  (preprocess (action (run %{bin:cppo} %%%CPPO_D%%% -V OCAML:%{ocaml_version} %{input-file})))
   (libraries unix geneweb.wserver %%%SOSA_PKG%%% %%%GWDB_PKG%%% geneweb benchmark)
 )
 
