OCaml 4.05: fixed test compilation with stdlib-shims

--- a/test/dune.in
+++ b/test/dune.in
@@ -1,6 +1,6 @@
 (library
  (name dummy_gwdb)
- (libraries geneweb.def)
+ (libraries geneweb.def stdlib-shims)
  (implements geneweb.gwdb.mli)
  (modules gwdb)
 )
