--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,7 +18,7 @@ platform:
 environment:
   CYG_ROOT: C:/cygwin64
   CYG_BASH: '%CYG_ROOT%/bin/bash -lc'
-  OPAM_PACKAGES: 'benchmark camlp5 cppo dune markup num ocaml ounit stdlib-shims unidecode zarith'
+  OPAM_PACKAGES: 'benchmark camlp5 cppo dune markup num ocaml ounit stdlib-shims unidecode.0.2.0 zarith'
 
 install:
   - 'set OPAMYES=1'
