--- a/geneweb.opam
+++ b/geneweb.opam
@@ -36,7 +36,7 @@ depends: [
   "ocaml" { >= "4.05" }
   "ounit" { with-test }
   "stdlib-shims"
-  "unidecode" { >= "0.2.0" }
+  "unidecode" { = "0.2.0" }
 ]
 
 depopts: [
