Exported Calendar module as external lib

--- a/lib/util/dune.in
+++ b/lib/util/dune.in
@@ -4,6 +4,7 @@
  (wrapped false)
  (preprocess (action (run %{bin:cppo} %%%CPPO_D%%% -V OCAML:%{ocaml_version} %{input-file})))
  (libraries
+   calendars
    stdlib-shims
    unidecode
    geneweb-lib.def
