--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,3 +32,9 @@ install:
 
 build_script:
   - '%CYG_BASH% "cd ${APPVEYOR_BUILD_FOLDER} && BENCH_FILE=geneweb-bench.tmp.bin make ci"'
+  - '%CYG_BASH% "cd ${APPVEYOR_BUILD_FOLDER} && ./configure --sosa-zarith && make clean distrib"'
+  - 7z a geneweb.latest.zip %APPVEYOR_BUILD_FOLDER%\distribution
+
+artifacts:
+  - path: geneweb.latest.zip
+    name: GeneWeb
