Write an opam file for each sub-package

--- a/benchmark/dune.in
+++ b/benchmark/dune.in
@@ -1,7 +1,7 @@
 (executable
   (name bench)
   (preprocess (action (run %{bin:cppo} %%%CPPO_D%%% -V OCAML:%{ocaml_version} %{input-file})))
-  (libraries unix geneweb.wserver %%%SOSA_PKG%%% %%%GWDB_PKG%%% geneweb benchmark)
+  (libraries unix %%%WSERVER_PKG%%% %%%SOSA_PKG%%% %%%GWDB_PKG%%% geneweb benchmark)
 )
 
 (alias (name runbench) (action (run ./bench.exe) ) )
