--- a/geneweb-api.opam
+++ b/geneweb-api.opam
@@ -1,6 +1,8 @@
 opam-version: "2.0"
 
-synopsis: "Genealogy library and software"
+name: "geneweb"
+
+synopsis: "Genealogy library and software, API mode enabled"
 
 maintainer: [ "Julien Sagot <julien.sagot@geneanet.org>" ]
 
@@ -13,7 +15,7 @@ dev-repo: "git://github.com/geneweb/geneweb"
 bug-reports: "https://github.com/geneweb/geneweb/issues"
 
 build: [
-  [ "./configure" ]
+  [ "./configure" "--api" ]
   [ "dune" "build" "-p" name "-j" jobs ]
 ]
 
@@ -24,9 +26,15 @@ depends: [
   "dune" { >= "1.10" }
   "markup"
   "ocaml" { >= "4.05" }
+  "ocurl"
   "ounit" { with-test }
+  "piqi"
+  "piqilib"
+  "redis"
+  "redis-sync"
   "stdlib-shims"
   "unidecode" { = "0.2.0" }
+  "yojson"
 ]
 
 conflict-class: [ "geneweb" ]
