--- a/lib/sosa.num/dune
+++ b/lib/sosa.num/dune
@@ -1,6 +1,6 @@
 (library
  (name sosa_num)
- (public_name geneweb.sosa-num)
+ (public_name geneweb-sosa-num)
  (libraries num)
  (implements geneweb.sosa.mli)
 )
